kubernetes/network-old/apps/remote/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: remote
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-remote-access
  namespace: remote
spec:
  podSelector: {}
  egress:
    - to:
        # Only allow egress to LAN
        - ipBlock:
            cidr: ${HOMELAN_IPV4}
        - ipBlock:
            cidr: ${HOMELAN_IPV6}
  policyTypes:
    - Egress
